# blokhain

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/proto/: app.proto
app/src/: server.rs
blokhain/: Cargo.toml
blokhain/src/: block.rs  blokhain.rs
frontend/: Cargo.toml  build.rs  index.html  rust-toolchain.toml
frontend/src/: client.rs  lib.rs
src/: block.rs  blokhain.rs  lib.rs  main.rs
